<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/back"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:background="@color/black"
        android:alpha="0.5"
        android:layout_height="match_parent"/>
   <include layout="@layout/include_company"/>w

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clyout_password"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        android:padding="40dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       >
        <TextView
            android:layout_width="wrap_content"
            android:text="title"
            android:visibility="gone"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/string_username"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/string_password"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_username" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_login_error"
            android:textColor="@color/red"
            android:textSize="30sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/edt_password"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:background="@color/theme"
            android:text="@string/string_cancel"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_error" />

        <Button
            android:id="@+id/btn_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/theme"
            android:layout_marginRight="40dp"
            android:alpha="0.5"
            android:enabled="false"
            android:text="@string/string_sure"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_error" />

        <com.liebe.base_comm.view.GifView
            android:id="@+id/loadingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:background="@color/white"
        app:layout_constraintStart_toEndOf="@+id/clyout_password"
        android:id="@+id/llyout_life"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:visibility="gone"
        android:padding="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="100dp"
            android:layout_gravity="center"
            android:layout_height="100dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/string_machine_life_hint"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="wrap_content"
            android:text="@string/string_check"
            android:textColor="@color/white"
            android:background="@color/theme"
            android:id="@+id/btn_life_check"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:padding="20dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
