<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="120dp"
        android:id="@+id/iv_logo"
        android:src="@drawable/company_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_height="60dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:id="@+id/tv_company_chinese_name"
        android:textSize="40sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/company_chinese_name"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:id="@+id/tv_company_enlish_name"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_company_chinese_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/company_english_name"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/llyout_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tv_company_enlish_name"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="联系电话："
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_company_contact_number"
            android:textColor="@color/theme"
            android:textSize="40sp"
            android:text="@string/company_contact_number"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
